--- a/.cmake/shell.html
+++ b/.cmake/shell.html
@@ -178,22 +178,22 @@
         var Module = {
             preRun: [],
             postRun: [],
-            print: (function() {
-                return function(text) {
-                    if (arguments.length > 1) {
-                        text = Array.prototype.slice.call(arguments).join(' ');
-                    }
+            // print: (function() {
+            //     return function(text) {
+            //         if (arguments.length > 1) {
+            //             text = Array.prototype.slice.call(arguments).join(' ');
+            //         }
 
-                    console.log(text);
-                };
-            })(),
-            printErr: function(text) {
-                if (arguments.length > 1) {
-                    text = Array.prototype.slice.call(arguments).join(' ');
-                }
+            //         console.log(text);
+            //     };
+            // })(),
+            // printErr: function(text) {
+            //     if (arguments.length > 1) {
+            //         text = Array.prototype.slice.call(arguments).join(' ');
+            //     }
 
-                console.error(text);
-            },
+            //     console.error(text);
+            // },
             canvas: (function() {
                 var canvas = document.querySelector('#canvas');
 
